# cs148-project

./: .gitignore  CMakeLists.txt  Camera.h  Makefile  Readme.md  bordershader.frag  final.frag  lightray.frag  lightray.vs  lightstate.cpp  lightstate.h  main.cpp  map001.map  map001_lights.map  map001_mirrors.map  mirror.blend  pyramid  pyramid.blend  pyramid.blend1  pyramid2.mtl  scattering.cpp  scattering.h  scene.cpp  scene.h  shader.frag  shader.vs
common/: controls.cpp  controls.h  mesh.cpp  mesh.h  model.cpp  model.h  setup.cpp  setup.h
egypt_mummy_model/: mummy.mtl
models/: mirror.mtl
pyramid_model/: pyramid.blend  pyramid.mtl
scary_mummy_model/: 0afbba58.dds  3417f014.dds  7e7933b2.dds  87dc7000.dds  Momie.mtl  bec30810.dds  c3caecfd.dds  cafaa6b0.dds
scattering/: Makefile  finalPass.frag  finalPass.vs  gaussian.frag  lightMap.frag  lightMap.vs  main.cpp  phong.frag  phong.vs  scattering.cpp  scattering.h
small_mummy_model/: 62241.mtl  materials.mtl  object.properties
